@@ -8,14 +8,16 @@
 #'an error. This is in order to not risk aborting or stopping the process that
 #'you wanted to get notified about.
 #'
-#'@param sound character string or number specifying what sound to be played by
-#'  either specifying one of the built in sounds or specifying the path to a wav
-#'  file. The default is 1. Possible sounds are: \enumerate{ \item \code{"ping"}
-#'  \item \code{"coin"} \item \code{"fanfare"} \item \code{"complete"} \item
-#'  \code{"treasure"} \item \code{"ready"} \item \code{"shotgun"} \item
-#'  \code{"mario"} \item \code{"wilhelm"} \item \code{"facebook"} \item \code{"sword"} } If
-#'  \code{sound} does not match any of the sounds above, or is a valid path, a
-#'  random sound will be played.
+#'@param sound character string or number specifying what sound to be played by 
+#'  either specifying one of the built in sounds, specifying the path to a wav 
+#'  file or specifying an url. The default is 1. Possible sounds are:
+#'  \enumerate{ \item \code{"ping"} \item \code{"coin"} \item \code{"fanfare"}
+#'  \item \code{"complete"} \item \code{"treasure"} \item \code{"ready"} \item
+#'  \code{"shotgun"} \item \code{"mario"} \item \code{"wilhelm"} \item
+#'  \code{"facebook"} \item \code{"sword"} } If \code{sound} does not match any
+#'  of the sounds above, or is a valid path or url, a random sound will be
+#'  played. Currently \code{beep} can only handle http urls, https is not
+#'  supported.
 #'@param expr An optional expression to be excecuted before the sound.
 #'  
 #'  
@@ -57,7 +59,9 @@ beep <- function(sound=1, expr=NULL) {
       sound <- str_trim(sound)
       if(file.exists(sound)) {
         sound_path <- sound
-      } else if(str_detect(sound, "^https?://")) {
+      } else if(str_detect(sound, "^https://")) {
+        warning("Can't currently use https urls, only http.")
+      } else if(str_detect(sound, "^http://")) {
         temp_file <- tempfile(pattern="")
         if(download.file(sound, destfile = temp_file, quiet = TRUE) == 0) { # The file was successfully downloaded
           sound_path <- temp_file
